# PaperForge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/: deps.py  main.py
api/routes/: approvals.py  apps.py  artifacts.py  events.py  files.py  library.py  messages.py  preview.py  runs.py  sandboxes.py  settings.py  tasks.py
docs/: 00-overview.md  01-project-structure.md  02-orchestrator.md  03-sub-agents.md  04-sandbox-preview.md  05-frontend-ui.md  06-backend-api.md  07-data-model.md  08-development.md  09-code-review-and-fixes.md  10-code-ui-review-and-fixes.md  11-chatgpt-codex-ui-implementation-plan.md  11-code-ui-review-modification-plan.md
paperforge/: __init__.py  config.py
paperforge/agents/: __init__.py  browser_smoke.py  composer.py  nextjs_generator.py  paper_parser.py  product_planner.py  verifier.py
paperforge/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  mock_provider.py  openai_provider.py
paperforge/orchestrator/: __init__.py  approvals.py  events.py  loop.py  tasks.py  tools.py
paperforge/prompts/: __init__.py  composer.md  nextjs_generator.md  orchestrator.md  paper_parser.md  product_planner.md  repair_agent.md  verifier.md
paperforge/sandbox/: __init__.py  build_runner.py  docker_runner.py  monitor.py
paperforge/schemas/: __init__.py  app_manifest.py  composition.py  paper.py  planner_output.py  prd.py  tool_result.py  verification.py
paperforge/storage/: __init__.py  artifacts.py  db.py
tests/: conftest.py  test_app_workspace_contract.py  test_approval_checkpoint.py  test_approvals_api.py  test_browser_smoke.py  test_event_persistence.py  test_file_api_contract.py  test_library_settings_contract.py  test_orchestrator_workflow.py  test_parser_chunking.py  test_run_state_contract.py  test_storage_legacy.py  test_task_cancel.py  test_verifier_layers.py  test_workspace_revisions.py
tests/e2e/: test_full_pipeline.py  test_user_flows.py
tests/unit/: test_agents.py  (+11 more)
web/: next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
(+54 files in other folders)
