[project]
name = "paperforge"
version = "0.1.0"
description = "PaperForge - 论文产品化助手：论文 PDF → 可运行的 Next.js full-stack app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Vincent Wenhan", email = "wenhan@example.com" }
]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",
    # LLM SDKs
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    # HTTP client
    "httpx>=0.27.2",
    "websockets>=13.0",
    # Data validation
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    # PDF parsing
    "pymupdf>=1.24.10",
    # Docker
    "docker>=7.1.0",
    # SQLite helpers (standard lib has sqlite3, but these help)
    "aiosqlite>=0.20.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "playwright>=1.45.0",
]

[project.urls]
Repository = "https://github.com/Vincent-Wenhan/PaperForge"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fitz", "docker"]
ignore_missing_imports = true
